--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+
+
+.game {
+  display: flex;
+  width: 1200px;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.game-info {
   display: flex;
   flex-direction: column;
+  gap: 20px;
+  flex: 2;
+  border: 1px solid black;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  width: 100px;
+  height: 100px;
+  /* flex: 1; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.status{
+  /* flex: 1; */
+  font-size: 24px;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border: none;
+}
+
+.game-board {
+  flex: 10;
+  /* margin: auto; */
+}
+
+.board-row {
+  width: 100%;
+  display: flex;
+}
+.square {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  box-sizing: border-box;
+  /* pointer-events: none; */
+}
+
+.X{
+  font-size: 20px;
+  font-weight: bold;
+  color: green;
+}
+
+.O {
+  font-size: 20px;
+  font-weight: bold;
+  color: red;
 }
