--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -26,6 +26,7 @@ img {
   align-items: center;
   gap: 5px;
 }
+
 .header-buttons button {
   padding: 4px 10px;
   background-color: rgba(16, 84, 147, 1);
@@ -44,7 +45,7 @@ img {
   background-color: rgba(121, 156, 198, 1);
 }
 
-.list-game{
+.list-game {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -53,7 +54,7 @@ img {
   height: 100%;
 }
 
-.item-game{
+.item-game {
   width: 100%;
   height: 120px;
   border-radius: 5px;
@@ -65,9 +66,9 @@ img {
   flex: 10;
 }
 
-.body-top {
-}
-.nav{
+.body-top {}
+
+.nav {
   display: flex;
 }
 
@@ -91,6 +92,7 @@ img {
   display: flex;
   flex-direction: column;
 }
+
 .info-top {
   display: flex;
   align-items: center;
@@ -112,7 +114,7 @@ img {
   background-color: greenyellow;
 }
 
-.info-top button i{
+.info-top button i {
   /* width: 40px;
   height: 40px; */
   font-size: 20px;
@@ -131,13 +133,13 @@ img {
   flex: 1;
 }
 
-.type{
+.type {
   width: 50px;
   height: 50px;
 }
 
 .info .buttons {
-  display:  flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -162,6 +164,7 @@ img {
   justify-content: center;
   border: 2px solid orange;
   margin-top: 2px;
+  position: relative;
 }
 
 .board-row {
@@ -180,5 +183,40 @@ img {
   justify-content: center;
 }
 
-.square img {
+
+.start {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  /* background-color: white; */
+  /* opacity: 0.7; */
+  /* filter: blur(1); */
 }
+
+.start .logo {
+  width: 70%;
+  height: 300px;
+  margin: auto;
+}
+
+.start .buttons {
+  width: 70%;
+  margin: auto;
+  text-align: center;
+}
+
+.start .buttons button {
+  border-radius: 5px;
+  border: none;
+  font-size: x-large;
+  font-weight: bold;
+  padding: 20px 40px;
+  color: white;
+  background: greenyellow;
+}
+
+.square img {}
