--- a/src/App.css
+++ b/src/App.css
@@ -297,3 +297,24 @@ img {
   text-decoration: none;
 }
 
+
+         
+.btn-grad-4 {
+  background-image: linear-gradient(to right, #0cebeb 0%, #20e3b2  51%, #0cebeb  100%);
+  margin: 10px;
+  /* padding: 15px 45px; */
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;            
+  box-shadow: 0 0 20px #eee;
+  border-radius: 50%;
+  display: block;
+}
+
+.btn-grad-4:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
